# dl-cli

./: filescanner.app.db  pyproject.toml
src/dl_cli/: __init__.py  cli.py  config.py  database.py  file_indexer_v2.py  models.py  root_manager.py  schemas.py
src/scan-utils/: scanner.py
