[project]
name = "dl-cli"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Will Morris", email = "will.morris@childrensfactory.com" }
]
requires-python = ">=3.12"
dependencies = [
    "sqlalchemy>=2.0.41",
    "typer>=0.16.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
